--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@toast-ui/react-editor": "^3.2.3",
+    "@vitejs/plugin-basic-ssl": "^1.1.0",
     "axios": "^1.7.4",
+    "jsonwebtoken": "^9.0.2",
     "marked": "^14.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.0",
+    "vite-plugin-mkcert": "^1.17.6",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -28,8 +31,9 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.9",
-    "vite": "^5.4.0"
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
+    "vite": "^5.4.0",
+    "vite-plugin-favicon": "^1.0.8"
   }
 }
