ci: Add dotenv setup into s3 deploy action

--- a/.github/workflows/s3-deploy.yml
+++ b/.github/workflows/s3-deploy.yml
@@ -24,6 +24,11 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Create env file
+        run: |
+          touch .env.local
+          echo "${{ secrets.DOT_ENV }}" >> .env.local
+
       - name: Build project
         run: pnpm run build
 
