style: Update style

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@toast-ui/react-editor": "^3.2.3",
     "antd": "^5.24.7",
     "axios": "^1.8.4",
+    "framer-motion": "^12.23.0",
     "hangul-js": "^0.2.6",
     "jsonwebtoken": "^9.0.2",
     "marked": "^14.0.0",
