--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^12.23.0",
     "hangul-js": "^0.2.6",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.544.0",
     "marked": "^14.0.0",
     "react": "^18.3.1",
     "react-diff-viewer-continued": "^3.4.0",
