--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.0",
+    "ts-pattern": "^5.4.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
