--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "devs": "HTTPS=true SSL_CRT_FILE=localhost.pem SSL_KEY_FILE=localhost-key.pem vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "openapi:fetch": "node scripts/fetch-openapi.mjs",
+    "openapi:patch": "node scripts/patch-openapi.mjs",
+    "orval:gen": "npm run openapi:fetch && npm run openapi:patch && orval --config orval.config.cjs",
+    "orval": "npm run orval:gen -- --watch"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.74.3",
-    "@toast-ui/editor": "^3.2.2",
-    "@toast-ui/react-editor": "^3.2.3",
     "antd": "^5.24.7",
     "axios": "^1.8.4",
     "framer-motion": "^12.23.0",
@@ -39,6 +41,7 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "orval": "^8.0.3",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "vite": "^5.4.0",
